fixed align issue

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -233,6 +233,7 @@ h3 .face {
     border: none;
     margin-bottom: 0px;
     border-radius: 0px;
+    padding: 0;
 }
 
 .thumbnail {
